WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93867
Fullscreen/normal volume sliders don't stay in sync
https://bugs.webkit.org/show_bug.cgi?id=93867
Summary
Fullscreen/normal volume sliders don't stay in sync
Jer Noble
Reported
2012-08-13 10:53:55 PDT
Fullscreen/normal volume sliders don't stay in sync
Attachments
Patch
(4.44 KB, patch)
2012-08-13 10:58 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-05
(309.41 KB, application/zip)
2012-08-13 12:12 PDT
,
WebKit Review Bot
no flags
Details
Patch
(5.30 KB, patch)
2012-08-13 12:35 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-08-13 10:58:36 PDT
Created
attachment 158043
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-13 12:12:47 PDT
Comment on
attachment 158043
[details]
Patch
Attachment 158043
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13480854
New failing tests: media/video-controls-fullscreen-volume.html
WebKit Review Bot
Comment 3
2012-08-13 12:12:50 PDT
Created
attachment 158066
[details]
Archive of layout-test-results from gce-cr-linux-05 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-05 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Jer Noble
Comment 4
2012-08-13 12:35:39 PDT
Created
attachment 158075
[details]
Patch
Eric Carlson
Comment 5
2012-08-13 13:10:47 PDT
Comment on
attachment 158075
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=158075&action=review
> LayoutTests/media/video-controls-fullscreen-volume.html:12 > + var startTest = function() {
Why are the functions declared as local variables?
Jer Noble
Comment 6
2012-08-13 13:29:06 PDT
(In reply to
comment #5
)
> (From update of
attachment 158075
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=158075&action=review
> > > LayoutTests/media/video-controls-fullscreen-volume.html:12 > > + var startTest = function() { > > Why are the functions declared as local variables?
In JavaScript, functions are objects. So even if you declared them C-style, they'd still be local variables. (Except, since they're in global scope, they're actually global variables.) The C-style function definition is just syntactic sugar for this style of declaration.
Eric Carlson
Comment 7
2012-08-13 13:43:02 PDT
(In reply to
comment #6
)
> (In reply to
comment #5
) > > (From update of
attachment 158075
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=158075&action=review
> > > > > LayoutTests/media/video-controls-fullscreen-volume.html:12 > > > + var startTest = function() { > > > > Why are the functions declared as local variables? > > In JavaScript, functions are objects. So even if you declared them C-style, they'd still be local variables. (Except, since they're in global scope, they're actually global variables.) The C-style function definition is just syntactic sugar for this style of declaration.
Right, but why declare them this way when very few layout tests do? Are pedantry points redeemable now :-) ?
Jer Noble
Comment 8
2012-08-13 14:22:12 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > (In reply to
comment #5
) > > > (From update of
attachment 158075
[details]
[details] [details]) > > > View in context:
https://bugs.webkit.org/attachment.cgi?id=158075&action=review
> > > > > > > LayoutTests/media/video-controls-fullscreen-volume.html:12 > > > > + var startTest = function() { > > > > > > Why are the functions declared as local variables? > > > > In JavaScript, functions are objects. So even if you declared them C-style, they'd still be local variables. (Except, since they're in global scope, they're actually global variables.) The C-style function definition is just syntactic sugar for this style of declaration. > > Right, but why declare them this way when very few layout tests do?
Huh, I always write them this way.
> Are pedantry points redeemable now :-) ?
They're worth double with your WebKit Value Card. :)
WebKit Review Bot
Comment 9
2012-08-14 12:38:20 PDT
Comment on
attachment 158075
[details]
Patch Clearing flags on attachment: 158075 Committed
r125590
: <
http://trac.webkit.org/changeset/125590
>
WebKit Review Bot
Comment 10
2012-08-14 12:38:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug