Fullscreen/normal volume sliders don't stay in sync https://bugs.webkit.org/show_bug.cgi?id=93867

Reviewed by Eric Carlson.

Source/WebCore:

Change the full screen volume slider, if present, when the media element's volume
changes.

Test: media/video-controls-fullscreen-volume.html

* html/shadow/MediaControlRootElement.cpp:
(WebCore::MediaControlRootElement::changedVolume):

LayoutTests:

New test checking that volume changes in the media element are reflected in the full
screen volume slider.

* media/video-controls-fullscreen-volume-expected.txt: Added.
* media/video-controls-fullscreen-volume.html: Added.
* platform/chromium/TestExpectations: Skip this test on chromium.


Canonical link: https://commits.webkit.org/111857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125590 268f45cc-cd09-0410-ab3c-d52691b4dbfc